--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Landingspage Bethuel</title>
+    <title>Landingspage spencer</title>
     <meta name="author" content="Bethuel Heldt">
     <link rel="stylesheet" href="css/style.css">
     <script src="js/main.js" defer></script>
